modules/vpc/main.tf
# VPC Configuration
resource "aws_vpc" "eks_vpc" {
  cidr_block           = var.vpc_cidr  
  enable_dns_hostnames = true  
  enable_dns_support   = true  

  tags = {
    Project     = "EKS-Cluster"
    Environment = "dev" 
  }
}


# Public Subnets
resource "aws_subnet" "public" {
  count             = length(define_cidrs)
  vpc_id            = aws_vpc.eks_vpc.id
  cidr_block        = var.public_subnet_cidr[count.index] 
  availability_zone = add_availaability_zones[count.index]

  map_public_ip_on_launch = true  

  tags = {
    Name    = "public-subnet-${count.index + 1}"  
    Tier    = "public"
  }
}



resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidr)
  vpc_id            = aws_vpc.eks_vpc.id
  cidr_block        = var.private_subnet_cidr[count.index] 
  availability_zone = var.availability_zones[count.index] 

  map_public_ip_on_launch = true  

  tags = {
    Name    = "private-subnet-${count.index + 1}"  
    Tier    = "private"
  }
}


# Internet Gateway
resource "aws_internet_gateway" "int-gw" {
  vpc_id = aws_vpc.eks_vpc.id

  tags = {
    Name = "igw" 
  }
}


# Elastic IPs
resource "aws_eip" "eip-nat" {
  count = length(var.public_subnet_cidr)  
  domain = "vpc"

    
}


#NAT Gateway
resource "aws_nat_gateway" "nat-gw" {
  count         = length(var.public_subnet_cidr)  
  allocation_id = aws_eip.eip-nat[count.index].id  
  subnet_id     = aws_subnet.public[count.index].id

  tags = {
    Name = "nat-gateway-${count.index + 1}"
  }
}


# Route Tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.eks_vpc.id

  route {
    cidr_block = "0.0.0.0/0"  # Allows all outbound traffic
    gateway_id = aws_internet_gateway.int-gw.id
  }

  tags = {
    Name = "route-table-public"    
  }
}


resource "aws_route_table" "private" {
  count = length(var.private_subnet_cidr)   
  vpc_id = aws_vpc.eks_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw[count.index].id
  }

  tags = {
    Name = "private-RT-${count.index + 1}"  
  }
}

# Route Table Associations public
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_cidr)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Route Table Associations private
resource "aws_route_table_association" "private" {
  count          = length(var.private_subnet_cidr)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}
